--- a/0-Project/docs/IA048-Projeto_Final-Gabriel_Toffanetto/bibliograpy.bib
+++ b/0-Project/docs/IA048-Projeto_Final-Gabriel_Toffanetto/bibliograpy.bib
@@ -32,20 +32,6 @@
   file = {/home/toffanetto/Zotero/storage/A3WJRWBA/Badrinarayanan et al. - 2016 - SegNet A Deep Convolutional Encoder-Decoder Archi.pdf;/home/toffanetto/Zotero/storage/RPGQWTF9/1511.html}
 }
 
-@phdthesis{bernardesvitor2014UrbanEnvironmentNavigation,
-  type = {{Doutor em Engenharia Mec{\^a}nica}},
-  title = {{Urban environment and navigation using robotic vision: conception and implementation applied to autonomous vehicle = Percep{\c c}{\~a}o do ambiente urbano e navega{\c c}{\~a}o usando vis{\~a}o rob{\'o}tica: concep{\c c}{\~a}o e implementa{\c c}{\~a}o aplicado {\`a} ve{\'i}culo aut{\^o}nomo}},
-  shorttitle = {{Urban environment and navigation using robotic vision}},
-  author = {Bernardes Vitor, Giovani},
-  year = {2014},
-  month = sep,
-  address = {Campinas, SP},
-  doi = {10.47749/T/UNICAMP.2014.944321},
-  urldate = {2024-06-08},
-  langid = {portuguese},
-  school = {Universidade Estadual de Campinas}
-}
-
 @incollection{brostow2008SegmentationRecognitionUsing,
   title = {Segmentation and {{Recognition Using Structure}} from {{Motion Point Clouds}}},
   booktitle = {Computer {{Vision}} -- {{ECCV}} 2008},
@@ -304,6 +290,20 @@
   isbn = {978-1-4673-2755-8 978-1-4673-2754-1},
   keywords = {History},
   file = {/home/toffanetto/Zotero/storage/NCHDFPLZ/Vitor et al. - 2013 - A 2D3D Vision Based Approach Applied to Road Dete.pdf}
+}
+
+@phdthesis{vitor2014UrbanEnvironmentNavigation,
+  type = {{Doutor em Engenharia Mec{\^a}nica}},
+  title = {{Urban environment and navigation using robotic vision: conception and implementation applied to autonomous vehicle = Percep{\c c}{\~a}o do ambiente urbano e navega{\c c}{\~a}o usando vis{\~a}o rob{\'o}tica: concep{\c c}{\~a}o e implementa{\c c}{\~a}o aplicado {\`a} ve{\'i}culo aut{\^o}nomo}},
+  shorttitle = {{Urban environment and navigation using robotic vision}},
+  author = {Vitor, Giovani Bernardes},
+  year = {2014},
+  month = sep,
+  address = {Campinas, SP},
+  doi = {10.47749/T/UNICAMP.2014.944321},
+  urldate = {2024-06-08},
+  langid = {portuguese},
+  school = {Universidade Estadual de Campinas}
 }
 
 @article{vitor2021ModelingEvidentialGrids,
