--- a/0-Project/docs/IA048-Projeto_Final-Gabriel_Toffanetto/IA048-Projeto_Final-Gabriel_Toffanetto.tex
+++ b/0-Project/docs/IA048-Projeto_Final-Gabriel_Toffanetto/IA048-Projeto_Final-Gabriel_Toffanetto.tex
@@ -105,7 +105,7 @@ Este trabalho é dividido em seis partes, onde na Seção~\ref{sc:introducao} é
 \begin{note}
 	\begin{itemize}
 		\item Artigos \textit{Survey} \cite{janai2020ComputerVisionAutonomous}
-		\item Tipos de redes utilizadas \cite{chao2019HarDNetLowMemory,fan2021RethinkingBiSeNetRealtime, wang2019ESNetEfficientSymmetric, yu2020BiSeNetV2Bilateral,poudel2018ContextNetExploringContext,badrinarayanan2016SegNetDeepConvolutional}
+		\item Tipos de redes utilizadas \cite{chao2019HarDNetLowMemory,fan2021RethinkingBiSeNetRealtime, wang2019ESNetEfficientSymmetric, yu2020BiSeNetV2Bilateral, yu2018BiSeNetBilateralSegmentation,poudel2018ContextNetExploringContext,badrinarayanan2016SegNetDeepConvolutional} 
 		\item Resultados estado-da-arte \cite{papadeas2021RealTimeSemanticImage}
 		\begin{itemize}
 			\item mIoU
@@ -133,7 +133,7 @@ Este trabalho é dividido em seis partes, onde na Seção~\ref{sc:introducao} é
 	\end{itemize}
 \end{note}
 
-\subsection{Arquiteturas e redes neurais }
+\subsection{Arquitetura}
 
 \subsection{\textit{Dataset} de treinamento e dados de teste}
 
