--- a/0-Project/docs/IA048-Projeto_Final-Gabriel_Toffanetto/IA048-Projeto_Final-Gabriel_Toffanetto.tex
+++ b/0-Project/docs/IA048-Projeto_Final-Gabriel_Toffanetto/IA048-Projeto_Final-Gabriel_Toffanetto.tex
@@ -102,8 +102,10 @@ Este trabalho é dividido em seis partes, onde na Seção~\ref{sc:introducao} é
 \section{Estado da arte} \label{sc:estado-da-arte}
 
 
+
 \begin{note}
 	\begin{itemize}
+		\item Estratégias para operação em real time
 		\item Artigos \textit{Survey} \cite{janai2020ComputerVisionAutonomous}
 		\item Tipos de redes utilizadas \cite{chao2019HarDNetLowMemory,fan2021RethinkingBiSeNetRealtime, wang2019ESNetEfficientSymmetric, yu2020BiSeNetV2Bilateral, yu2018BiSeNetBilateralSegmentation,poudel2018ContextNetExploringContext,badrinarayanan2016SegNetDeepConvolutional} 
 		\item Resultados estado-da-arte \cite{papadeas2021RealTimeSemanticImage}
